# mirith_nist_submission

./: README.txt
Optimized_Implementation/mirith_avx2_IIIa_fast/: sign.c
Optimized_Implementation/mirith_avx2_Ib_short/test/: Makefile
Optimized_Implementation/mirith_avx2_Va_fast/: CMakeLists.txt
Optimized_Implementation/mirith_avx2_Va_short/: blas.h
Optimized_Implementation/mirith_hypercube_avx2_IIIa_fast/: blas.h
Optimized_Implementation/mirith_hypercube_avx2_IIIb_shorter/: .gitignore
Optimized_Implementation/mirith_hypercube_avx2_Ia_shorter/bench/: Makefile
Optimized_Implementation/mirith_hypercube_avx2_Ib_short/bench/: bench_mirith.c
Optimized_Implementation/mirith_hypercube_avx2_Va_shorter/test/: Makefile
Optimized_Implementation/mirith_hypercube_avx2_Vb_shortest/: CMakeLists.txt
Optimized_Implementation/mirith_hypercube_m4_Ia_fast/: CMakeLists.txt  api.h  hash.c  internal_get_cycles.c  internal_get_cycles.h  seed_tree.c
Optimized_Implementation/mirith_hypercube_m4_Ia_fast/nist/: Makefile
Optimized_Implementation/mirith_hypercube_m4_Ib_fast/: CMakeLists.txt  hash.h  sign.c  sign.h
Optimized_Implementation/mirith_hypercube_m4_Ib_fast/test/: Makefile  test_mirith.c
Optimized_Implementation/mirith_hypercube_neon_IIIa_short/: internal_get_cycles.c
Optimized_Implementation/mirith_hypercube_neon_Ia_short/bench/: bench_mirith.c
Optimized_Implementation/mirith_hypercube_neon_Ia_shorter/: sign.c
Optimized_Implementation/mirith_hypercube_neon_Ia_shortest/bench/: Makefile
Optimized_Implementation/mirith_hypercube_neon_Va_fast/: blas_neon.h
Reference_Implementation/mirith_Ib_short/test/: Makefile
Reference_Implementation/mirith_hypercube_IIIb_short/: CMakeLists.txt
Reference_Implementation/mirith_hypercube_Ia_fast/test/: test_mirith.c
Reference_Implementation/mirith_hypercube_Ib_shortest/: sign.c
Reference_Implementation/mirith_hypercube_Ib_shortest/test/: test_mirith.c
Reference_Implementation/mirith_hypercube_Va_short/test/: Makefile
